made navbar links functional and put portfolio image cards in anchor tags to make them clickable

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">About Me</a>
+            <a class="nav-link" aria-current="page" href="#about-me">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -62,127 +62,154 @@
       </div>
     </div>
 
-    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-      <h3 style="text-align:center;">About Me</h3>
-      <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
-        foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
-        posuere
-        mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim.
-        Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede,
-        nullam
-        vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales
-        tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at
-        quibusdam
-        sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare.
-        Suscipit
-        proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
-    </div>
-
-    <div class="album py-5 bg-light">
+    <a id="about-me"></a>
       <div class="container">
-        <h2 class="pb-2 border-bottom">Recent Projects</h2>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <div class="img-wrapper">
-                <!-- Card Image -->
-                <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                  src="https://github.com/j-goldrath/note-taker/blob/main/public/assets/images/note-taker-app-homepage.png?raw=true"
-                  alt="">
-              </div>
-              <!-- Card Text -->
-              <div class="card-body text-center">
-                <h5 class="card-text text-primary">Note-Taker App</h5>
-                <p>Node.js/MySQL</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <div class="img-wrapper">
-
-                <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                  src="https://raw.githubusercontent.com/j-goldrath/quiz-game/main/assets/images/quiz-start-desktop.png"
-                  alt="">
-              </div>
-
-              <div class="card-body text-center">
-                <h5 class="card-text text-primary">Simpsons Quiz Game</h5>
-                <p>JavaScript/HTML/CSS</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <div class="img-wrapper">
-
-                <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                  src="https://github.com/j-goldrath/workout-tracker/raw/main/assets/images/workout-dashboard.png?raw=true"
-                  alt="">
-              </div>
-              <div class="card-body text-center">
-                <h5 class="card-text text-primary">Fitness Tracker</h5>
-                <p>Node.js/NoSQL</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <div class="img-wrapper">
-                <!-- Card Image -->
-                <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                  src="https://github.com/j-goldrath/budget-tracker/raw/main/assets/images/progressive-budget-pwa.png?raw=true"
-                  alt="">
-              </div>
-              <!-- Card Text -->
-              <div class="card-body text-center">
-                <h5 class="card-text text-primary">Budget-Tracker</h5>
-                <p>Offline/Online PWA</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <div class="img-wrapper">
-                <!-- Card Image -->
-                <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                  src="https://github.com/j-goldrath/team-profile-generator/raw/main/assets/images/team-profile-generator-demo-output.png?raw=true"
-                  alt="">
-              </div>
-              <!-- Card Text -->
-              <div class="card-body text-center">
-                <h5 class="card-text text-primary">Team Profile Generator</h5>
-                <p>Node.js</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <div class="img-wrapper">
-                <!-- Card Image -->
-                <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                  src="https://github.com/j-goldrath/tech-blog/blob/main/assets/images/tech-blog-demo.gif?raw=true"
-                  alt="">
-              </div>
-              <!-- Card Text -->
-              <div class="card-body text-center">
-                <h5 class="card-text text-primary">Tech-Blog</h5>
-                <p>Node.js/MySQL/Handlebars</p>
-              </div>
-            </div>
-          </div>
-
-
+        <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+          <h3 style="text-align:center;">About Me</h3>
+          <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
+            foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
+            posuere
+            mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
+            dignissim.
+            Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede,
+            nullam
+            vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at,
+            sodales
+            tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at
+            quibusdam
+            sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare.
+            Suscipit
+            proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.
+          </p>
         </div>
       </div>
-    </div>
+    
+
+    <a id="portfolio"></a>
+      <div class="album py-5 bg-light">
+        <div class="container">
+          <h2 class="pb-2 border-bottom">Recent Projects</h2>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+            <a class="destyle-anchor" href="https://peaceful-beyond-09080.herokuapp.com/">
+              <div class="col">
+
+                <div class="card shadow-sm">
+                  <div class="img-wrapper">
+                    <!-- Card Image -->
+                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                      src="https://github.com/j-goldrath/note-taker/blob/main/public/assets/images/note-taker-app-homepage.png?raw=true"
+                      alt="">
+                  </div>
+                  <!-- Card Text -->
+                  <div class="card-body text-center">
+                    <h4 class="card-text text-primary">Note-Taker</h4>
+                    <p>Node.js | MySQL</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+
+            <a class="destyle-anchor" href="https://j-goldrath.github.io/quiz-game/">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="img-wrapper">
+
+                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                      src="https://raw.githubusercontent.com/j-goldrath/quiz-game/main/assets/images/quiz-start-desktop.png"
+                      alt="">
+                  </div>
+
+                  <div class="card-body text-center">
+                    <h4 class="card-text text-primary">Simpsons Quiz Game</h4>
+                    <p>JavaScript | HTML | CSS</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a class="destyle-anchor" href="https://hidden-springs-58589.herokuapp.com/">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="img-wrapper">
+
+                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                      src="https://github.com/j-goldrath/workout-tracker/raw/main/assets/images/workout-dashboard.png?raw=true"
+                      alt="">
+                  </div>
+                  <div class="card-body text-center">
+                    <h4 class="card-text text-primary">Fitness Tracker</h4>
+                    <p>Node.js | NoSQL</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a class="destyle-anchor" href="https://quiet-beach-13296.herokuapp.com/">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="img-wrapper">
+                    <!-- Card Image -->
+                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                      src="https://github.com/j-goldrath/budget-tracker/raw/main/assets/images/progressive-budget-pwa.png?raw=true"
+                      alt="">
+                  </div>
+                  <!-- Card Text -->
+                  <div class="card-body text-center">
+                    <h4 class="card-text text-primary">Budget-Tracker</h4>
+                    <p>Offline/Online PWA</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a class="destyle-anchor" href="https://github.com/j-goldrath/team-profile-generator">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="img-wrapper">
+                    <!-- Card Image -->
+                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                      src="https://github.com/j-goldrath/team-profile-generator/raw/main/assets/images/team-profile-generator-demo-output.png?raw=true"
+                      alt="">
+                  </div>
+                  <!-- Card Text -->
+                  <div class="card-body text-center">
+                    <h4 class="card-text text-primary">Team Profile Generator</h4>
+                    <p>Node.js</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a class="destyle-anchor" href="https://afternoon-crag-37504.herokuapp.com/">
+              <div class="col">
+                <div class="card shadow-sm">
+                  <div class="img-wrapper">
+                    <!-- Card Image -->
+                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                      src="https://github.com/j-goldrath/tech-blog/blob/main/assets/images/tech-blog-demo.gif?raw=true"
+                      alt="">
+                  </div>
+                  <!-- Card Text -->
+                  <div class="card-body text-center">
+                    <h4 class="card-text text-primary">Tech-Blog</h4>
+                    <p>Node.js | MySQL | Handlebars</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+          </div>
+        </div>
+      </div>
+
+    
+
+
+
+    <a id="contact"></a>
+
 
   </main>
 
