added href links to portfolio project image cards

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
   </nav> -->
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top px-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><span>J.Goldrath</span></a>
+      <a class="navbar-brand" href="#home"><span class="">J.Goldrath</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,6 +47,7 @@
   </nav>
 
   <main>
+    <a id="home"></a>
     <div class="galaxy-bg">
       <div class="px-4 py-5 my-5 text-center text-white">
         <h1 class="mt-5 display-5 fw-bold landing-hero">Hi, my name is <span class="text-info">Jonathan Goldrath</span>
