added linkedin, github, facebook, email, and phone links to footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>J.Goldrath</title>
   <!-- <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon" /> -->
@@ -64,148 +65,148 @@
     </div>
 
     <a id="about-me"></a>
-      <div class="container">
-        <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-          <h3 style="text-align:center;">About Me</h3>
-          <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
-            foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
-            posuere
-            mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
-            dignissim.
-            Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede,
-            nullam
-            vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at,
-            sodales
-            tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at
-            quibusdam
-            sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare.
-            Suscipit
-            proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.
-          </p>
-        </div>
+    <div class="container">
+      <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+        <h3 style="text-align:center;">About Me</h3>
+        <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
+          foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
+          posuere
+          mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
+          dignissim.
+          Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede,
+          nullam
+          vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at,
+          sodales
+          tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at
+          quibusdam
+          sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare.
+          Suscipit
+          proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.
+        </p>
       </div>
-    
+    </div>
+
 
     <a id="portfolio"></a>
-      <div class="album py-5 bg-light">
-        <div class="container">
-          <h2 class="pb-2 border-bottom">Recent Projects</h2>
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="album py-5 bg-light">
+      <div class="container">
+        <h2 class="pb-2 border-bottom">Portfolio</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-            <a class="destyle-anchor" href="https://peaceful-beyond-09080.herokuapp.com/">
-              <div class="col">
+          <a class="destyle-anchor" href="https://peaceful-beyond-09080.herokuapp.com/">
+            <div class="col">
 
-                <div class="card shadow-sm">
-                  <div class="img-wrapper">
-                    <!-- Card Image -->
-                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                      src="https://github.com/j-goldrath/note-taker/blob/main/public/assets/images/note-taker-app-homepage.png?raw=true"
-                      alt="">
-                  </div>
-                  <!-- Card Text -->
-                  <div class="card-body text-center">
-                    <h4 class="card-text text-primary">Note-Taker</h4>
-                    <p>Node.js | MySQL</p>
-                  </div>
+              <div class="card shadow-sm">
+                <div class="img-wrapper">
+                  <!-- Card Image -->
+                  <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                    src="https://github.com/j-goldrath/note-taker/blob/main/public/assets/images/note-taker-app-homepage.png?raw=true"
+                    alt="">
+                </div>
+                <!-- Card Text -->
+                <div class="card-body text-center">
+                  <h4 class="card-text text-primary">Note-Taker</h4>
+                  <p>Node.js | MySQL</p>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
 
-            <a class="destyle-anchor" href="https://j-goldrath.github.io/quiz-game/">
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="img-wrapper">
+          <a class="destyle-anchor" href="https://j-goldrath.github.io/quiz-game/">
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="img-wrapper">
 
-                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                      src="https://raw.githubusercontent.com/j-goldrath/quiz-game/main/assets/images/quiz-start-desktop.png"
-                      alt="">
-                  </div>
+                  <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                    src="https://raw.githubusercontent.com/j-goldrath/quiz-game/main/assets/images/quiz-start-desktop.png"
+                    alt="">
+                </div>
 
-                  <div class="card-body text-center">
-                    <h4 class="card-text text-primary">Simpsons Quiz Game</h4>
-                    <p>JavaScript | HTML | CSS</p>
-                  </div>
+                <div class="card-body text-center">
+                  <h4 class="card-text text-primary">Simpsons Quiz Game</h4>
+                  <p>JavaScript | HTML | CSS</p>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-            <a class="destyle-anchor" href="https://hidden-springs-58589.herokuapp.com/">
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="img-wrapper">
+          <a class="destyle-anchor" href="https://hidden-springs-58589.herokuapp.com/">
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="img-wrapper">
 
-                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                      src="https://github.com/j-goldrath/workout-tracker/raw/main/assets/images/workout-dashboard.png?raw=true"
-                      alt="">
-                  </div>
-                  <div class="card-body text-center">
-                    <h4 class="card-text text-primary">Fitness Tracker</h4>
-                    <p>Node.js | NoSQL</p>
-                  </div>
+                  <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                    src="https://github.com/j-goldrath/workout-tracker/raw/main/assets/images/workout-dashboard.png?raw=true"
+                    alt="">
+                </div>
+                <div class="card-body text-center">
+                  <h4 class="card-text text-primary">Fitness Tracker</h4>
+                  <p>Node.js | NoSQL</p>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-            <a class="destyle-anchor" href="https://quiet-beach-13296.herokuapp.com/">
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="img-wrapper">
-                    <!-- Card Image -->
-                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                      src="https://github.com/j-goldrath/budget-tracker/raw/main/assets/images/progressive-budget-pwa.png?raw=true"
-                      alt="">
-                  </div>
-                  <!-- Card Text -->
-                  <div class="card-body text-center">
-                    <h4 class="card-text text-primary">Budget-Tracker</h4>
-                    <p>Offline/Online PWA</p>
-                  </div>
+          <a class="destyle-anchor" href="https://quiet-beach-13296.herokuapp.com/">
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="img-wrapper">
+                  <!-- Card Image -->
+                  <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                    src="https://github.com/j-goldrath/budget-tracker/raw/main/assets/images/progressive-budget-pwa.png?raw=true"
+                    alt="">
+                </div>
+                <!-- Card Text -->
+                <div class="card-body text-center">
+                  <h4 class="card-text text-primary">Budget-Tracker</h4>
+                  <p>Offline/Online PWA</p>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-            <a class="destyle-anchor" href="https://github.com/j-goldrath/team-profile-generator">
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="img-wrapper">
-                    <!-- Card Image -->
-                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                      src="https://github.com/j-goldrath/team-profile-generator/raw/main/assets/images/team-profile-generator-demo-output.png?raw=true"
-                      alt="">
-                  </div>
-                  <!-- Card Text -->
-                  <div class="card-body text-center">
-                    <h4 class="card-text text-primary">Team Profile Generator</h4>
-                    <p>Node.js</p>
-                  </div>
+          <a class="destyle-anchor" href="https://github.com/j-goldrath/team-profile-generator">
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="img-wrapper">
+                  <!-- Card Image -->
+                  <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                    src="https://github.com/j-goldrath/team-profile-generator/raw/main/assets/images/team-profile-generator-demo-output.png?raw=true"
+                    alt="">
+                </div>
+                <!-- Card Text -->
+                <div class="card-body text-center">
+                  <h4 class="card-text text-primary">Team Profile Generator</h4>
+                  <p>Node.js</p>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-            <a class="destyle-anchor" href="https://afternoon-crag-37504.herokuapp.com/">
-              <div class="col">
-                <div class="card shadow-sm">
-                  <div class="img-wrapper">
-                    <!-- Card Image -->
-                    <img style="height: 100%;" class="bd-placeholder-img card-img-top"
-                      src="https://github.com/j-goldrath/tech-blog/blob/main/assets/images/tech-blog-demo.gif?raw=true"
-                      alt="">
-                  </div>
-                  <!-- Card Text -->
-                  <div class="card-body text-center">
-                    <h4 class="card-text text-primary">Tech-Blog</h4>
-                    <p>Node.js | MySQL | Handlebars</p>
-                  </div>
+          <a class="destyle-anchor" href="https://afternoon-crag-37504.herokuapp.com/">
+            <div class="col">
+              <div class="card shadow-sm">
+                <div class="img-wrapper">
+                  <!-- Card Image -->
+                  <img style="height: 100%;" class="bd-placeholder-img card-img-top"
+                    src="https://github.com/j-goldrath/tech-blog/blob/main/assets/images/tech-blog-demo.gif?raw=true"
+                    alt="">
+                </div>
+                <!-- Card Text -->
+                <div class="card-body text-center">
+                  <h4 class="card-text text-primary">Tech-Blog</h4>
+                  <p>Node.js | MySQL | Handlebars</p>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-          </div>
         </div>
       </div>
+    </div>
 
-    
+
 
 
 
@@ -222,19 +223,34 @@
             <use xlink:href="#bootstrap"></use>
           </svg>
         </a>
-        <span class="text-muted">© 2021 Company, Inc</span>
+        <span class="text-muted">© 2021 J.Goldrath</span>
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#twitter"></use>
-            </svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#instagram"></use>
-            </svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+
+        <li class="ms-3 no-bull"><a class="text-muted" href="email:jonathan.goldrath@gmail.com"><i class="bi bi-envelope" style="font-size: 2rem;" role="img"
+          aria-label="email">
+        </i>jonathan.goldrath@gmail.com</a></li>
+
+        <li class="ms-3 no-bull"><a class="text-muted" href="tel:+18476875694"><i class="bi bi-telephone" style="font-size: 2rem;" role="img"
+          aria-label="phone">
+        </i>+1-847-687-5694</a></li>
+
+        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://github.com/j-goldrath"><i class="bi bi-github" style="font-size: 2rem;" role="img"
+          aria-label="linkedin">
+              <use xlink:href="#github"></use>
+        </i></a></li>
+
+        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://linkedin.com"><i class="bi-linkedin" style="font-size: 2rem;" role="img"
+              aria-label="linkedin">
+              <use xlink:href="#linkedin"></use>
+            </i></a></li>
+
+        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://facebook.com"><i class="bi bi-facebook" style="font-size: 2rem;" role="img"
+          aria-label="linkedin">
               <use xlink:href="#facebook"></use>
-            </svg></a></li>
+            </i></a></li>
+
       </ul>
     </footer>
   </div>
