--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
         <span class="text-muted">© 2021 J.Goldrath</span>
       </div>
 
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex no-bull">
 
         <li class="ms-3 no-bull"><a class="text-muted" href="email:jonathan.goldrath@gmail.com"><i class="bi bi-envelope" style="font-size: 2rem;" role="img"
           aria-label="email">
-        </i>jonathan.goldrath@gmail.com</a></li>
+        </i></a></li>
 
         <li class="ms-3 no-bull"><a class="text-muted" href="tel:+18476875694"><i class="bi bi-telephone" style="font-size: 2rem;" role="img"
           aria-label="phone">
-        </i>+1-847-687-5694</a></li>
+        </i></a></li>
 
         <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://github.com/j-goldrath"><i class="bi bi-github" style="font-size: 2rem;" role="img"
           aria-label="linkedin">
