--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <p class="lead mb-4">Full-Stack Developer | Engineer | Creative Problem Solver</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button> -->
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Get In Touch</button>
+            <button onclick="location.href='#contact'" type="button" class="btn btn-outline-secondary btn-lg px-4">Get
+              In Touch</button>
           </div>
         </div>
       </div>
@@ -66,25 +67,33 @@
 
     <a id="about-me"></a>
     <div class="container">
-      <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-        <h3 style="text-align:center;">About Me</h3>
-        <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the
-          foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
-          posuere
-          mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
-          dignissim.
-          Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede,
-          nullam
-          vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at,
-          sodales
-          tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at
-          quibusdam
-          sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare.
-          Suscipit
-          proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.
-        </p>
+      <div class="pt-5">
+        <img class="mx-auto d-block rounded-circle shadow"
+          src="./assets/images/j-goldrath-profile-pic.png" alt="Jonathan Golrath Profile Portrait Photo">
       </div>
-    </div>
+
+          <div class="about-me-paragraph" style="color: #777;text-align:center;padding:50px 80px;text-align: justify;">
+            <h3 style="text-align:center;">About Me</h3>
+            <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than
+              the
+              foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed
+              posuere
+              mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit
+              dignissim.
+              Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede,
+              nullam
+              vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at,
+              sodales
+              tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at
+              quibusdam
+              sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare.
+              Suscipit
+              proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat
+              leo.
+            </p>
+          </div>
+        </div>
+
 
 
     <a id="portfolio"></a>
@@ -228,26 +237,26 @@
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex no-bull">
 
-        <li class="ms-3 no-bull"><a class="text-muted" href="email:jonathan.goldrath@gmail.com"><i class="bi bi-envelope" style="font-size: 2rem;" role="img"
-          aria-label="email">
-        </i></a></li>
+        <li class="ms-3 no-bull"><a class="text-muted" href="email:jonathan.goldrath@gmail.com"><i
+              class="bi bi-envelope" style="font-size: 2rem;" role="img" aria-label="email">
+            </i></a></li>
 
-        <li class="ms-3 no-bull"><a class="text-muted" href="tel:+18476875694"><i class="bi bi-telephone" style="font-size: 2rem;" role="img"
-          aria-label="phone">
-        </i></a></li>
+        <li class="ms-3 no-bull"><a class="text-muted" href="tel:+18476875694"><i class="bi bi-telephone"
+              style="font-size: 2rem;" role="img" aria-label="phone">
+            </i></a></li>
 
-        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://github.com/j-goldrath"><i class="bi bi-github" style="font-size: 2rem;" role="img"
-          aria-label="linkedin">
+        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://github.com/j-goldrath"><i
+              class="bi bi-github" style="font-size: 2rem;" role="img" aria-label="linkedin">
               <use xlink:href="#github"></use>
-        </i></a></li>
+            </i></a></li>
 
-        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://linkedin.com"><i class="bi-linkedin" style="font-size: 2rem;" role="img"
-              aria-label="linkedin">
+        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://linkedin.com"><i
+              class="bi-linkedin" style="font-size: 2rem;" role="img" aria-label="linkedin">
               <use xlink:href="#linkedin"></use>
             </i></a></li>
 
-        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://facebook.com"><i class="bi bi-facebook" style="font-size: 2rem;" role="img"
-          aria-label="linkedin">
+        <li class="ms-3 no-bull"><a class="text-muted" target="_blank" href="https://facebook.com"><i
+              class="bi bi-facebook" style="font-size: 2rem;" role="img" aria-label="linkedin">
               <use xlink:href="#facebook"></use>
             </i></a></li>
 
